Ensure scene name and theme name z-index is well above the intented values that the scene media might use. - This is in response to a bug raised by Robin.

--- a/src/css/manifest2015.css
+++ b/src/css/manifest2015.css
@@ -51,7 +51,7 @@ html, body, #login, #player {
     padding: 6px 15px;
     color: white;
     font-size: 61px;
-    z-index: 2;
+    z-index: 99999;
     position: absolute;
     bottom: 0px;
 }
